added new requirejs build config

--- a/examples/requirejs/index.html
+++ b/examples/requirejs/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <title></title>  
-  <link rel="stylesheet" type="text/css" href="css/styles.css">
+  <!-- <link rel="stylesheet" type="text/css" href="css/styles.css -->
+  <script data-main="js/bootstrap" src="js/libs/requirejs/requirejs-1.0.7.min.js"></script>
 </head>
 <body>
-  <script data-main="js/bootstrap" src="js/libs/requirejs/requirejs-1.0.7.min.js"></script>
 </body>
 </html>
