Started working on conact directory example app

--- a/examples/requirejs/index.html
+++ b/examples/requirejs/index.html
@@ -6,5 +6,6 @@
   <script data-main="js/bootstrap" src="js/libs/requirejs/requirejs-1.0.7.min.js"></script>
 </head>
 <body>
+  <img src="img/placeholder.png"/>
 </body>
 </html>
