--- a/examples/requirejs/index.html
+++ b/examples/requirejs/index.html
@@ -3,7 +3,7 @@
 <head>
   <title></title>  
   <!-- <link rel="stylesheet" type="text/css" href="css/styles.css -->
-  <script data-main="js/bootstrap" src="js/libs/requirejs/requirejs-2.0.1.min.js"></script>
+  <script data-main="js/bootstrap" src="js/libs/require.js"></script>
 </head>
 <body>
   <img src="img/placeholder.png"/>
