--- a/test/index.html
+++ b/test/index.html
@@ -29,8 +29,8 @@
         paths: {
           // Common libraries
           'jquery'    : '../lib/jquery-1.7.1.min',
-          'underscore': '../lib/underscore-1.3.1.min',
-          'backbone'  : '../lib/backbone-0.9.2.min',
+          'underscore': '../node_modules/backbone/node_modules/underscore/underscore-min',
+          'backbone'  : '../node_modules/backbone/backbone-min',
           
           // Require JS plugins
           'text'      : '../lib/text',
