Updated locations of some libs
Backbone and underscore now come in via npm and live in node_modules.
Easier to manage this way, rather than having them in /lib and manging
manually

--- a/test/index.html
+++ b/test/index.html
@@ -9,7 +9,7 @@
     
     <script type="text/javascript" src="../node_modules/chai/chai.js"></script>
     <script type="text/javascript" src="../node_modules/mocha/mocha.js"></script>
-    <script type="text/javascript" src="../node_modules/requirejs/require.js"></script>
+    <script type="text/javascript" src="../lib/require.js"></script>
 
     <script type="text/javascript" >
       // Use the chai 'assert' library
