--- a/test/index.html
+++ b/test/index.html
@@ -53,6 +53,7 @@
 
     <script src="piewpiew.forms.fields.js"></script>
     <script src="piewpiew.validators.js"></script>
+    <script src="piewpiew.views.helpers.js"></script>
 
     <script>
       require(['jquery'], function($) {
@@ -64,5 +65,6 @@
   </head>
   <body>
     <div id="mocha"></div>  
+    <div id="output"></div>
   </body>
 </html>
