--- a/test/index.html
+++ b/test/index.html
@@ -51,9 +51,9 @@
       });
     </script>
 
-    <script src="piewpiew.forms.fields.js"></script>
+    <!--<script src="piewpiew.forms.fields.js"></script> -->
     <script src="piewpiew.validators.js"></script>
-    <script src="piewpiew.views.helpers.js"></script>
+    <!-- <script src="piewpiew.views.helpers.js"></script> -->
 
     <script>
       require(['jquery'], function($) {
